--- a/css/style.css
+++ b/css/style.css
@@ -159,7 +159,7 @@
     color: var(--white-color);
     font-family: var(--font-family);
     text-align: center;
-    border: none;
+    border:2px solid var(--button-bg-color);
     border-radius: 10px;
     font-weight: 700;
     font-size: 15px;
@@ -194,6 +194,10 @@
       font-size: 24px; 
       line-height: 120%;
       color: var(--title-color);
+    }
+    .server__img{
+      box-shadow: 0px 12px 24px -8px rgba(0, 107, 116, 0.3);
+      border-radius: 24px;
     }
     .server-des {
       font-style: normal;
